--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,19 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+apply plugin: 'jacoco'
+
+
+jacocoTestCoverageVerification {
+	dependsOn test
+
+	violationRules {
+		rule {
+			limit {
+				minimum = 0.20
+			}
+		}
+	}
+}
+
